@@ -1,3 +1,6 @@
+2003-07-27 Aaron Faupell <afaupell@users.sourceforge.net>
+	* irc.tcl removed catch around socket creation
+
 2003-07-02 Aaron Faupell <afaupell@users.sourceforge.net>
 	* irc.tcl fixed logger not being turned off if debug
 	was turned off prior to creating new connection.
